<resources>
    <string name="app_name">Top Free Apps</string>
    <string name="servicio_url">https://itunes.apple.com/us/rss/topfreeapplications/limit=20/json</string>

    <string name="filtro">Filtrar por categorías</string>
    <string name="lbl_name">Nombre App:</string>
    <string name="lbl_realese_date">Fecha de publicación:</string>
    <string name="lbl_price">Precio en la tienda:</string>
    <string name="lbl_summary">Resumen</string>
    <string name="lbl_make_by">Hecho por:</string>
    <string name="lbl_category">Categoría:</string>
    <string name="btn_OK">OK</string>

    <!--Mensajes/Toast-->
    <string name="msg_no_internet">No hay conexión a internet.</string>
    <string name="msg_no_internet_image">No hay conexión a internet, la imágen no será descargada.</string>
    <string name="msg_no_info">No hay información disponible para mostrar.</string>
    <string name="msg_no_newinfo">No hay nueva información disponible para mostrar.</string>
    <string name="msg_no_categories">No hay categorías disponibles.</string>


</resources>
