<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resumen_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prueba.diana.pruebaapplist.Activities.ResumenAppActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/AppLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/app_icon"/>

            <LinearLayout
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/AppLogo"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <View style="@style/light_grayDivider" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/layout_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <RelativeLayout
                        android:layout_height="wrap_content"
                        android:layout_width="210dp"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/lblName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:padding="2dp"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:text="@string/lbl_name"/>

                        <TextView
                            android:id="@+id/TxtName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:padding="2dp"
                            android:textColor="@color/dark_gray"
                            android:textStyle="normal"
                            android:textSize="12sp"
                            android:text="asdadaad"
                            android:layout_toRightOf="@+id/lblName"/>

                        <TextView
                            android:id="@+id/lblMakeBy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:textSize="12sp"
                            android:padding="2dp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:text="@string/lbl_make_by"
                            android:layout_below="@+id/TxtName"/>

                        <TextView
                            android:id="@+id/TxtMakeBy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingBottom="2dp"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp"
                            android:text="asdadaad2"
                            android:layout_below="@+id/TxtName"
                            android:layout_toRightOf="@+id/lblMakeBy"    />

                        <TextView
                            android:id="@+id/lblFecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:textSize="12sp"
                            android:padding="2dp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:text="@string/lbl_realese_date"
                            android:layout_below="@+id/TxtMakeBy"/>

                        <TextView
                            android:id="@+id/TxtFecha"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:paddingBottom="2dp"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp"
                            android:text="asdadaad2"
                            android:layout_below="@+id/TxtMakeBy"
                            android:layout_toRightOf="@+id/lblFecha"    />

                        <TextView
                            android:id="@+id/lblPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:padding="2dp"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:text="@string/lbl_price"
                            android:layout_below="@+id/TxtFecha" />

                        <TextView
                            android:id="@+id/TxtPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="2dp"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp"
                            android:layout_below="@+id/TxtFecha"
                            android:layout_toRightOf="@+id/lblPrice"/>

                        <TextView
                            android:id="@+id/lblCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:padding="2dp"
                            android:textSize="12sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:text="@string/lbl_category"
                            android:layout_below="@+id/TxtPrice" />

                        <TextView
                            android:id="@+id/TxtCategory"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="2dp"
                            android:textColor="@color/dark_gray"
                            android:textSize="12sp"
                            android:layout_below="@+id/TxtPrice"
                            android:layout_toRightOf="@+id/lblCategory"/>


                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/divider2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/layout_info"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <View style="@style/light_grayDivider" />

                </LinearLayout>

                <TextView
                    android:id="@+id/lblTermsConditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:text="@string/lbl_summary"
                    android:layout_below="@+id/divider2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_below="@+id/lblTermsConditions"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <TextView
                        android:id="@+id/txtSummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="@color/light_gray"
                        android:textStyle="normal"
                        android:text="sahjaksljfhaksjfhaksjfhalkjdfh"/>

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
